# obsidian_meetings

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY_BOOTSTRAP.md  docker-compose.diarization.yml  install.sh  obsidian_spec.md  pyproject.toml  section18_clean.md  setup-dev-environment.sh
config/: README.md  voice_memo_utc_manifest.txt
docs/: DEVELOPER_ASSIGNMENT_PROMPTS.md  DIARIZATION_CATCHUP_AGENT.md  DIARIZATION_SIDECAR.md  DOCS_INDEX.md  EPICS_AND_STORIES.md  EXECUTION_PLAN.md  GAP_TASK_LIST_2026-02-10.md  HAZEL_SETUP.md  HOTKEYS.md  INTEGRATION_SMOKE_REPORT_2026-02-08.md  OPERATIONS_RUNBOOK.md  OUTSTANDING_TASKS.md  RELEASE_AUDIT_2026-02-09.md  RELEASE_AUDIT_2026-02-10.md  RELEASE_AUDIT_2026-03-09.md  SECURITY_SECRETS.md  SETUP_AND_DEPENDENCIES.md  SKILLS_ROLLOUT.md  SMOKE_AND_SLICING_REQUIREMENTS.md  STORY_COMMIT_SLICING_REPORT.json  TDD_AND_DOD.md  TEAM_ASSIGNMENT_PLAN.md  UI-QUICKSTART.md  VAULT_METADATA_NORMALIZATION_RUNBOOK.md  WORKING_CHARTER.md
km/: Meeting-Automation-Macros.kmmacros
scripts/: analyze_diarization_batch_rate.py  audit_vault_tags.py  backfill_historical.sh  bootstrap_whisperx_model.sh  calendar_events.jxa  deploy_bundle_apply.py  diarization_catchup.py  diarization_check_reminder.sh  diarization_minutes_refresh.py  diarization_model_sync.py  diarization_model_sync.sh  diarize_sidecar.sh  eventkit_fetch.py  fix_vault_tags.py  hazel_ingest_file.sh  meetingctl_cli.sh  monitor_diarization_batch.py  monitor_progress.sh  package_deploy_bundle.py  prune_orphan_artifacts.py  refresh_op_cache.sh  run-incremental-workflow.sh  setup.sh  (+7 more)
(+111 files in other folders)
